--- a/Naxam.BraintreeDropIn .Droid/packages.config
+++ b/Naxam.BraintreeDropIn .Droid/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="Naxam.BrainTree.BrowserSwitch.Droid" version="0.1.4" targetFramework="monoandroid71" />
   <package id="Naxam.BrainTree.Core" version="2.6.2.1" targetFramework="monoandroid71" />
+  <package id="Naxam.BrainTree.Droid" version="2.6.2" targetFramework="monoandroid71" />
   <package id="Naxam.BraintreeCardForm.Droid" version="3.1.0" targetFramework="monoandroid71" />
   <package id="Naxam.Paypal.DataCollector" version="2.6.2" targetFramework="monoandroid71" />
+  <package id="Naxam.Paypal.OneTouch" version="2.6.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
