--- a/Naxam.BraintreeDropIn .Droid/Naxam.BraintreeDropIn.Droid.csproj
+++ b/Naxam.BraintreeDropIn .Droid/Naxam.BraintreeDropIn.Droid.csproj
@@ -17,6 +17,7 @@
     <TargetFrameworkVersion>v7.1</TargetFrameworkVersion>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <NoWarn>CS0109</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -46,11 +47,17 @@
     <Reference Include="Naxam.BrainTree.Core, Version=2.6.2.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Naxam.BrainTree.Core.2.6.2.1\lib\MonoAndroid10\Naxam.BrainTree.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Naxam.BrainTree.Droid, Version=2.6.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Naxam.BrainTree.Droid.2.6.2\lib\MonoAndroid10\Naxam.BrainTree.Droid.dll</HintPath>
+    </Reference>
     <Reference Include="Naxam.BraintreeCardForm.Droid, Version=3.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Naxam.BraintreeCardForm.Droid.3.1.0\lib\MonoAndroid10\Naxam.BraintreeCardForm.Droid.dll</HintPath>
     </Reference>
     <Reference Include="Naxam.Paypal.DataCollector, Version=2.6.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Naxam.Paypal.DataCollector.2.6.2\lib\MonoAndroid10\Naxam.Paypal.DataCollector.dll</HintPath>
+    </Reference>
+    <Reference Include="Naxam.Paypal.OneTouch, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Naxam.Paypal.OneTouch.2.6.2\lib\MonoAndroid10\Naxam.Paypal.OneTouch.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
