--- a/BraintreeDropInQs/Properties/AndroidManifest.xml
+++ b/BraintreeDropInQs/Properties/AndroidManifest.xml
@@ -1,14 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="BraintreeDropInQs.BraintreeDropInQs"
+          package="net.naxam.braintreedropinqs"
           android:versionCode="1"
           android:versionName="1.0"
           android:installLocation="auto">
   <uses-sdk android:minSdkVersion="21" />
+
+
   <application android:allowBackup="true"
                android:label="@string/app_name"
                android:icon="@drawable/ic_launcher">
+
     <meta-data android:name="com.google.android.gms.wallet.api.enabled"
                android:value="true" />
+    <activity
+      android:name=".MainActivity">
+      <!--<intent-filter>
+        <action android:name="Android.Intent.Action.MAIN" />
+        <category android:name="Android.Intent.Category.LAUNCHER" />
+      </intent-filter>-->
+    </activity>
+    <activity android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
+              android:launchMode="singleTask">
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="${applicationId}.braintree" />
+      </intent-filter>
+    </activity>
   </application>
 </manifest>
