--- a/BraintreeDropInQs/packages.config
+++ b/BraintreeDropInQs/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GoogleGson" version="2.6.1.0" targetFramework="monoandroid71" />
+  <package id="GoogleGson" version="2.8.1" targetFramework="monoandroid71" />
   <package id="LeakCanaryBinding" version="1.5.1.1" targetFramework="monoandroid71" />
-  <package id="Microsoft.AspNetCore.WebUtilities" version="1.1.2" targetFramework="monoandroid71" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.Extensions.Primitives" version="1.1.1" targetFramework="monoandroid71" />
-  <package id="Microsoft.Net.Http.Headers" version="1.1.2" targetFramework="monoandroid71" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.Net.Http.Headers" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Naxam.BrainTree.BrowserSwitch.Droid" version="0.1.4" targetFramework="monoandroid71" />
   <package id="Naxam.BrainTree.Core" version="2.6.2.1" targetFramework="monoandroid71" />
@@ -14,14 +14,15 @@
   <package id="Naxam.BraintreeCardForm.Droid" version="3.1.0" targetFramework="monoandroid71" />
   <package id="Naxam.Paypal.DataCollector" version="2.6.2" targetFramework="monoandroid71" />
   <package id="Naxam.Paypal.OneTouch" version="2.6.2" targetFramework="monoandroid71" />
-  <package id="Naxam.SquareUp.OkHttp3" version="3.6.0" targetFramework="monoandroid71" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
+  <package id="Naxam.SquareUp.OkHttp3" version="3.8.0" targetFramework="monoandroid71" />
+  <package id="Naxam.SquareUp.Okio" version="1.13.0" targetFramework="monoandroid71" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
   <package id="Refit" version="4.0.1" targetFramework="monoandroid71" />
-  <package id="Square.OkIO" version="1.11.0" targetFramework="monoandroid71" />
+  <package id="Square.OkIO" version="1.13.0" targetFramework="monoandroid71" />
   <package id="Square.Retrofit" version="1.9.0.0" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Buffers" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="monoandroid71" />
@@ -39,7 +40,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Linq" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Net.Http" version="4.3.2" targetFramework="monoandroid71" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="monoandroid71" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid71" />
@@ -48,7 +49,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="monoandroid71" />
@@ -59,7 +60,7 @@
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="monoandroid71" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="monoandroid71" />
@@ -86,7 +87,7 @@
   <package id="Xamarin.Android.Support.v7.Preference" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Build.Download" version="0.4.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Build.Download" version="0.4.7" targetFramework="monoandroid71" />
   <package id="Xamarin.CardIO.Android" version="5.5.1" targetFramework="monoandroid71" />
   <package id="Xamarin.GooglePlayServices.Base" version="42.1021.1" targetFramework="monoandroid71" />
   <package id="Xamarin.GooglePlayServices.Basement" version="42.1021.1" targetFramework="monoandroid71" />
