--- a/BraintreeDropInQs/BraintreeDropInQs.csproj
+++ b/BraintreeDropInQs/BraintreeDropInQs.csproj
@@ -38,6 +38,8 @@
     <AndroidLinkMode>None</AndroidLinkMode>
     <EmbedAssembliesIntoApk>False</EmbedAssembliesIntoApk>
     <EnableProguard>true</EnableProguard>
+    <AndroidSupportedAbis />
+    <JavaMaximumHeapSize>1G</JavaMaximumHeapSize>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
