--- a/dropin.nuspec
+++ b/dropin.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <!-- Required elements-->
         <id>Naxam.BraintreeDropIn.Droid</id>
-        <version>3.1.0.1</version>
+        <version>3.1.0.2</version>
         <authors>NAXAM CO.,LTD</authors>
         <owners>NAXAM CO.,LTD</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -19,7 +19,7 @@
         <dependencies>
             <dependency id="Xamarin.GooglePlayServices.Wallet" version="42.1021.1" />
             <dependency id="Naxam.BrainTree.Droid" version="2.6.2" />
-            <dependency id="Naxam.BrainTreeCore.Droid" version="2.6.2.1" />
+            <dependency id="Naxam.BrainTree.Core" version="2.6.2.1" />
             <dependency id="Naxam.BrainTreeCardForm.Droid" version="3.1.0" />
             <dependency id="Xamarin.Android.Support.v7.CardView" version="25.4.0.2" />
         </dependencies>
