--- a/BraintreeDropInQs/packages.config
+++ b/BraintreeDropInQs/packages.config
@@ -2,23 +2,20 @@
 <packages>
   <package id="GoogleGson" version="2.8.1" targetFramework="monoandroid71" />
   <package id="LeakCanaryBinding" version="1.5.1.1" targetFramework="monoandroid71" />
-  <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.1" targetFramework="monoandroid80" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="monoandroid80" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.Net.Http.Headers" version="2.0.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.Net.Http.Headers" version="2.0.1" targetFramework="monoandroid80" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Naxam.BrainTree.BrowserSwitch.Droid" version="0.1.4" targetFramework="monoandroid71" />
-  <package id="Naxam.BrainTree.Core" version="2.6.2.1" targetFramework="monoandroid71" />
-  <package id="Naxam.BrainTree.Droid" version="2.6.2" targetFramework="monoandroid71" />
-  <package id="Naxam.BraintreeCardForm.Droid" version="3.1.1" targetFramework="monoandroid80" />
-  <package id="Naxam.Paypal.DataCollector" version="2.6.2" targetFramework="monoandroid71" />
-  <package id="Naxam.Paypal.OneTouch" version="2.6.2" targetFramework="monoandroid71" />
-  <package id="Naxam.SquareUp.OkHttp3" version="3.8.0" targetFramework="monoandroid71" />
-  <package id="Naxam.SquareUp.Okio" version="1.13.0" targetFramework="monoandroid71" />
-  <package id="NETStandard.Library" version="2.0.0" targetFramework="monoandroid71" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
-  <package id="Refit" version="4.0.1" targetFramework="monoandroid71" />
+  <package id="Naxam.BrainTree.Core" version="2.10.0" targetFramework="monoandroid80" />
+  <package id="Naxam.BrainTree.Droid" version="2.10.0" targetFramework="monoandroid80" />
+  <package id="Naxam.Paypal.DataCollector" version="2.10.0" targetFramework="monoandroid80" />
+  <package id="Naxam.Paypal.OneTouch" version="2.10.0" targetFramework="monoandroid80" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid80" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="monoandroid80" />
+  <package id="Refit" version="4.3.0" targetFramework="monoandroid80" />
   <package id="Square.OkIO" version="1.13.0" targetFramework="monoandroid71" />
   <package id="Square.Retrofit" version="1.9.0.0" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
@@ -47,6 +44,7 @@
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Reflection.TypeExtensions" version="4.4.0" targetFramework="monoandroid80" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="monoandroid71" />
@@ -57,10 +55,10 @@
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="monoandroid71" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="monoandroid80" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="monoandroid71" />
@@ -68,7 +66,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid80" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid80" />
